# esp-server

./: .clangd  .gitignore  CMakeLists.txt  sdkconfig
.devcontainer/: devcontainer.json
.github/workflows/: pr_main.yml
automation/: requirements.txt  service_api_pb2.py  tests.py
components/mcu_server/: CMakeLists.txt
docker/: apply_env.sh  dev.dockerfile  esp-base.dockerfile  git-runner.dockerfile
esp_server_app/: CMakeLists.txt
esp_server_app/src/: esp_server_app.cpp
include/: esp_timer_scheduler.hpp  gpio_relay_controller.hpp  http_server.hpp  pt100_sensor_controller.hpp  wifi_station_guard.hpp
ipc/: CMakeLists.txt
ipc/include/: esp_ipc_connection.hpp
ipc/tests/: CMakeLists.txt
ipc/tests/src/: ut_esp_ipc_connection.cpp
main/: CMakeLists.txt
main/src/: esp-server.cpp
platform/: CMakeLists.txt
platform/include/: esp_gpi.hpp  esp_gpo.hpp
platform/tests/: CMakeLists.txt
platform/tests/src/: ut_esp_gpi_gpo.cpp
proto/: CMakeLists.txt
proto/include/: api_request_parser.hpp  api_response_serializer.hpp
proto/resourses/: service_api.proto
proto/tests/: CMakeLists.txt
proto/tests/src/: ut_api_request_parser.cpp
src/: esp-server.cpp  esp_mcu_server.cpp  esp_server.cpp
